2012-02-14  Sander van Dijk  <sgvandik@gmail.com>

	* rcssserver3d/main.cpp (Spark): 
	* rcssmonitor3d/main.cpp (Spark):
	- add --init-script-prefix option to specify location of spark.rb,
	  zeitgeist.rb, etc

2011-06-06  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* plugin/soccer/soccerruleaspect/soccerruleaspect.cpp
	 (SoccerRuleAspect::AnalyseTouchGroups):
	- fixed a horrible mistake of mine which prevented from touch group rules
	  to be applied at all 

2011-05-14  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* plugin/soccer/soccerruleaspect/soccerruleaspect.cpp 
	(SoccerRuleAspect::CheckGoal):
	- fixed a small bug in goal counting which cause this function to always
	  count a goal when ball moved out of the field 

2011-05-02  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* CMakeLists.txt: 
	- strip files when creating a binary package

2011-05-01  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* windows/uninstall_extra.nsi: 
	* windows/install_extra.nsi: 
	- install an rcsoccersim3d script under Windows
	- fixed path commands to not include = sign
	
	* cmake/FindODE.cmake: 
	- don't overwrite config options obtained from ode-config if available 
	
	* rcssagent3d/CMakeLists.txt: 
	- use lowercase ws2_32 to be compatible with mingw32
	
	* CMakeLists.txt: 
	- include AdditionalSearchPaths.cmake
	- added -shared flag for mingw when linking modules
	
	* cmake/AdditionalSearchPaths.cmake: 
	- sets up additional search paths under Windows to find dependencies in
	  common directories and the ones documented on the wiki
	
	* cmake/FindFreetype.cmake: 
	- removed; and additional search paths have been added to 
	  AdditionalSearchPaths.cmake file

2011-04-29  Hedayat Vatankhah  <hedayat.fwd@gmail.com>

	* CMakeLists.txt: 
	- use static boost libraries under Windows
	
	* windows/install_extra.nsi: 
	- adopt the script for the latest version of CMake and NSIS
	
	* rcssserver3d/CMakeLists.txt: 
	- don't install Linux only files in Windows
	
	* cmake/FindBoost.cmake: 